# ECAP5-BCARRIER-XLITE

./: CMakeLists.txt  README.md
.github/workflows/: generate-documentation.yml
docs/: CMakeLists.txt
docs/src/: conf.py  index.rst
docs/src/assets/: length-matching-diff.csv  length-matching-se.csv  overview.drawio  uart-selector.drawio
docs/src/design/: 1_introduction.rst  2_specification.rst  3_system_overview.rst  4_power.rst  5_soms.rst  6_uart.rst  7_misc.rst  8_mechanical.rst  9_routing.rst  index.rst
docs/src/errata/: 1.0.rst
production-files/: bom.csv  pick-and-place-pos.csv
production-files/gerber/: ecap5-bcarrier-xlite-B_Cu.gbl  ecap5-bcarrier-xlite-B_Mask.gbs  ecap5-bcarrier-xlite-B_Paste.gbp  ecap5-bcarrier-xlite-B_Silkscreen.gbo  ecap5-bcarrier-xlite-Edge_Cuts.gm1  ecap5-bcarrier-xlite-F_Cu.gtl  ecap5-bcarrier-xlite-F_Mask.gts  ecap5-bcarrier-xlite-F_Paste.gtp  ecap5-bcarrier-xlite-F_Silkscreen.gto  ecap5-bcarrier-xlite-In1_Cu.g1  ecap5-bcarrier-xlite-In2_Cu.g2  ecap5-bcarrier-xlite-NPTH-drl_map.gbr  ecap5-bcarrier-xlite-NPTH.drl  ecap5-bcarrier-xlite-PTH-drl_map.gbr  ecap5-bcarrier-xlite-PTH.drl  ecap5-bcarrier-xlite-job.gbrjob
src/: VIN9_15.kicad_sym  ecap5-bcarrier-xlite.kicad_pcb  ecap5-bcarrier-xlite.kicad_pro  ecap5-bcarrier-xlite.kicad_sch  fp-lib-table  sym-lib-table  symbols.kicad_sym
src/ecap5-bcarrier-xlite/: ecap5-bcarrier-xlite.kicad_prl  ecap5-bcarrier-xlite.kicad_pro  ecap5-bcarrier-xlite.kicad_sch
src/footprints/: SODIMM-260_DDR4_H4.0-5.2_OrientationStd_Socket.kicad_mod  SW_Push_1P1T_NO_CK_PTS125Sx73SMTR_1.kicad_mod
src/schematics/: som1.kicad_sch  som2.kicad_sch  usb-to-uart.kicad_sch
tests/: uart-test.py
